# llmrouter

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.example.yml  mise.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  preview.yml  release.yml  retag-latest.yml
llmrouter/: __init__.py  __main__.py  app.py  config.default.yaml  config.py
llmrouter/static/: index.html
tests/: conftest.py  test_classifier.py  test_config.py  test_owui.py  test_threading.py  test_threading_e2e.py
