[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmrouter"
version = "0.2.0"
description = "Cost/sensitivity-aware OpenAI-compatible router with secret redaction, audit log, and self-hosted UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dante Barbieri" }]
keywords = ["llm", "openai", "router", "litellm", "ollama", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "pyyaml>=6.0,<7",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<2",
    "ruff>=0.6,<1",
]

[project.urls]
Homepage = "https://github.com/dantebarbieri/llmrouter"
Repository = "https://github.com/dantebarbieri/llmrouter"
Issues = "https://github.com/dantebarbieri/llmrouter/issues"

[project.scripts]
llmrouter = "llmrouter.__main__:main"

[tool.setuptools.packages.find]
include = ["llmrouter*"]

[tool.setuptools.package-data]
llmrouter = ["static/*", "config.default.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
# B008 is the standard FastAPI idiom (Query/Header/Body in arg defaults).
# B017 is fine in tests that intentionally accept any validation error.
ignore = ["E501", "B008", "B017"]
